basic routing in place, refactored game into GameView component

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postgres": "^3.4.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.2",
     "vite-express": "^0.21.1",
     "vitest": "^3.2.1"
   },
