trying to fix typsscript errors

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 DATABASE_URL=postgresql://postgres:AIPDsVBc82KYpYll@db.sylulrajfkmdtykenzkp.supabase.co:5432/postgres
+REACT_APP_API_URL=https://your-api.onrender.com
+
+export {REACT_APP_API_URL}
