adding env variables

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 DATABASE_URL=postgresql://postgres:AIPDsVBc82KYpYll@db.sylulrajfkmdtykenzkp.supabase.co:5432/postgres
-REACT_APP_API_URL=https://your-api.onrender.com
+REACT_APP_API_URL=https://wd-tictactoe.onrender.com
+VERCEL_URL=https://tictactoe-ad306ljrg-williamldennis-projects.vercel.app
 
-export {REACT_APP_API_URL}
+export {REACT_APP_API_URL, VERCEL_URL}
