trying to update urls for frontend and backend

--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 DATABASE_URL=postgresql://postgres:AIPDsVBc82KYpYll@db.sylulrajfkmdtykenzkp.supabase.co:5432/postgres
 REACT_APP_API_URL=https://wd-tictactoe.onrender.com
+REACT_APP_API_URL=http://localhost:3000
+
 VERCEL_URL=https://tictactoe-ad306ljrg-williamldennis-projects.vercel.app
+VERCEL_URL=http://localhost:5173
 
 export {REACT_APP_API_URL, VERCEL_URL}
