--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://postgres:AIPDsVBc82KYpYll@db.sylulrajfkmdtykenzkp.supabase.co:5432/postgres
+DATABASE_URL=postgresql://postgres.sylulrajfkmdtykenzkp:AIPDsVBc82KYpYll@aws-0-us-east-2.pooler.supabase.com:6543/postgres
 REACT_APP_API_URL=https://wd-tictactoe.onrender.com
 
 VERCEL_URL=https://tictactoe-ad306ljrg-williamldennis-projects.vercel.app
