changed url on server

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 DATABASE_URL=postgresql://postgres.sylulrajfkmdtykenzkp:AIPDsVBc82KYpYll@aws-0-us-east-2.pooler.supabase.com:6543/postgres
-REACT_APP_API_URL=https://wd-tictactoe.onrender.com
+VERCEL_URL=http://localhost:5173
 
-VERCEL_URL=https://tictactoe-ad306ljrg-williamldennis-projects.vercel.app
+VITE_API_URL=http://localhost:3000
+REACT_APP_API_URL=http://localhost:3000
