--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "serve": "bun run server.ts",
+    "start": "bun vite"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
