--- a/package.json
+++ b/package.json
@@ -13,18 +13,22 @@
     "start": "bun vite"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.8",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
     "express": "^5.1.0",
+    "lucide-react": "^0.513.0",
     "postgres": "^3.4.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^3.3.0",
     "vite-express": "^0.21.1",
     "vitest": "^3.2.1"
   },
@@ -42,6 +46,7 @@
     "postcss": "^8.5.4",
     "tailwindcss": "^4.1.8",
     "tsx": "^4.19.4",
+    "tw-animate-css": "^1.3.4",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
